src/test/ui/block-result/unexpected-return-on-unit.stderr
error[E0308]: mismatched types
  --> $DIR/unexpected-return-on-unit.rs:9:5
   |
LL |     foo() //~ ERROR mismatched types
   |     ^^^^^ expected (), found usize
   |
   = note: expected type `()`
              found type `usize`
help: try adding a semicolon
   |
LL |     foo(); //~ ERROR mismatched types
   |          ^
help: try adding a return type
   |
LL | fn bar() -> usize {
   |          ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
